# rust-hdl

./: .gitignore  Cargo.toml  Notices.txt  extract-debug-tokens.sh
examples/: blinky.rs
rust-hdl-int/: Cargo.toml
rust-hdl-int/src/: lib.rs
rust-hdl-macros/: Cargo.toml
rust-hdl-macros/src/: lib.rs  macros.rs  val.rs
src/: clocking.rs  context.rs  export.rs  fmt_utils.rs  io.rs  ir.rs  lib.rs  logic.rs  module.rs  prelude.rs  types.rs  value.rs  values.rs
src/export/: rtlil.rs
src/export/rtlil/: id.rs
src/ir/: io.rs  logic.rs  module.rs  scope.rs  symbols.rs  types.rs  values.rs
src/types/: ints.rs
src/value/: integer.rs
src/values/: aggregate.rs  foreign_derives.rs  integer.rs  ints.rs  ops.rs
tests/: export_rtlil.rs  test1.rs  test_enum.rs  test_reg.rs  test_struct.rs  test_val_macro.rs  test_val_match.rs
tests/common/: mod.rs
tests/export_rtlil/export_rtlil/: output.expected.txt
tests/export_rtlil/export_rtlil_concat/: output.expected.txt  top_0.expected.txt
tests/export_rtlil/export_rtlil_slice/: output.expected.txt  top_0.expected.txt
tests/export_rtlil/export_rtlil_submodule/: output.expected.txt  top_0.expected.txt
tests/test1/test1/: top_0.expected.txt  top_1.expected.txt  top_2.expected.txt
tests/test1/test_structs/: field_0.expected.txt  submodule_0.expected.txt  top_0.expected.txt  top_1.expected.txt
tests/test1/test_sub_submodule/: sub_submodule_0.expected.txt  sub_submodule_1.expected.txt  submodule_0.expected.txt  submodule_1.expected.txt  top_1.expected.txt  top_2.expected.txt  top_3.expected.txt
(+194 files in other folders)
